--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    position: relative;
 }
 
 h1.title {
@@ -46,4 +48,63 @@ button {
 
 button.auto-play {
     margin-top: 5px;
+}
+
+.overlay {
+    z-index: 1000;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #111111ca;
+}
+
+.confirm-reset {
+
+    width: 200px;
+
+    border: 1px solid darkred;
+    border-radius: 4px;
+
+    background: #fafafa;
+    color: #111;
+    text-align: center;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 2px 12px;
+
+    z-index: 1001;
+}
+
+.confirm-reset h3 {
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+.confirm-reset p {
+    font-size: 14px;
+    color: #3e3c3c;
+    text-transform: capitalize;
+}
+
+.confirm-reset button {
+    margin: 5px;
+}
+
+.confirm-reset.hidden {
+    display: none;
+}
+
+.overlay.hidden {
+    display: none;
 }
